feat(SPV-737): adjust to filter models (#75)
