# docs/swagger.json
@@ -375,6 +375,23 @@
         }
     },
     "definitions": {
+        "filter.QueryParams": {
+            "type": "object",
+            "properties": {
+                "order_by_field": {
+                    "type": "string"
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "page_size": {
+                    "type": "integer"
+                },
+                "sort_direction": {
+                    "type": "string"
+                }
+            }
+        },
         "github_com_bitcoin-sv_spv-wallet-web-backend_domain_transactions.PaginatedTransactions": {
             "type": "object",
             "properties": {
@@ -557,13 +574,13 @@
         "transports_http_endpoints_api_config.PublicConfig": {
             "type": "object",
             "properties": {
-                "experimentalFeatures": {
+                "experimental_features": {
                     "type": "object",
                     "additionalProperties": {
                         "type": "boolean"
                     }
                 },
-                "paymailDomain": {
+                "paymail_domain": {
                     "type": "string"
                 }
             }
@@ -590,7 +607,7 @@
                     "$ref": "#/definitions/models.Metadata"
                 },
                 "params": {
-                    "$ref": "#/definitions/walletclient.QueryParams"
+                    "$ref": "#/definitions/filter.QueryParams"
                 }
             }
         },
@@ -601,7 +618,8 @@
                     "type": "string"
                 },
                 "metadata": {
-                    "$ref": "#/definitions/models.Metadata"
+                    "type": "object",
+                    "additionalProperties": {}
                 }
             }
         },
@@ -699,23 +717,6 @@
                 },
                 "userId": {
                     "type": "integer"
-                }
-            }
-        },
-        "walletclient.QueryParams": {
-            "type": "object",
-            "properties": {
-                "order_by_field": {
-                    "type": "string"
-                },
-                "page": {
-                    "type": "integer"
-                },
-                "page_size": {
-                    "type": "integer"
-                },
-                "sort_direction": {
-                    "type": "string"
                 }
             }
         }
