# transports/http/endpoints/api/contacts/model.go
@@ -1,20 +1,20 @@
 package contacts
 
 import (
-	walletclient "github.com/bitcoin-sv/spv-wallet-go-client"
 	"github.com/bitcoin-sv/spv-wallet/models"
+	"github.com/bitcoin-sv/spv-wallet/models/filter"
 )
 
 // UpsertContact represents a request for creating or updating new contact.
 type UpsertContact struct {
-	FullName string          `json:"fullName"`
-	Metadata models.Metadata `json:"metadata"`
+	FullName string         `json:"fullName"`
+	Metadata map[string]any `json:"metadata"`
 }
 
 type SearchContact struct {
-	Conditions  map[string]interface{}    `json:"conditions,omitempty"`
-	Metadata    models.Metadata           `json:"metadata,omitempty"`
-	QueryParams *walletclient.QueryParams `json:"params,omitempty"`
+	Conditions  map[string]interface{} `json:"conditions,omitempty"`
+	Metadata    models.Metadata        `json:"metadata,omitempty"`
+	QueryParams *filter.QueryParams    `json:"params,omitempty"`
 }
 
 // ConfirmContact represents a request for confirming a contact.
